# ss-python

./: .copier-data.yml  .dockerignore  .gitignore  .gitignore.jinja  .gitlab-ci.yml  .gitlab-ci.yml.jinja  .pre-commit-config.yaml  .readthedocs.yaml  .releaserc.json  .renovaterc.json  CHANGELOG.md  LICENSE  Makefile  Makefile.jinja  README.md  README.md.jinja  [% if ci == 'gitlab' or ci == 'both' %].gitlab-ci.yml[% endif %].jinja  codecov.yml  codecov.yml.jinja  copier.yaml  package.json  pyproject.toml  pyproject.toml.jinja  requirements.txt  {% if ci == 'gitlab' %}.gitlab-ci.yml{% endif %}.jinja  {{_copier_conf.answers_file}}.jinja
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/prebuild/.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  FUNDING.yml.jinja  dependabot.yml  renovate.json
.github/workflows/: ci.yml  ci.yml.jinja  commit.yml  commitlint.yml  delete-untagged-packages.yml  devcontainer.yml  documentation-links.yml  lint-pull-request-title.yml  lint-test.yml  lint.yml  package.yml  pages.yml  pr.yml  pull-request-title-lint.yml  pull-request.yml  readthedocs-preview.yml  readthedocs-preview.yml.jinja  release.yml  release.yml.jinja  renovate.yml  semantic-release.yml  tset.yml
.gitlab/: ci.yml  release.yml  renovate.json
.gitlab/ci/: ci.yml  devcontainer.yml  mr.yml  release.yml
.gitlab/workflows/: ci.yml  commitlint.yml  devcontainer.yml  mr.yml  release.yml  renovate.yml  semantic-release  semantic-release.yml
[% if ci=='github' or ci == 'both' %].github[% endif %]/workflows/: ci.yml.jinja
[% if repo_host_type == 'github.com' %].github[% endif %]/workflows/: ci.yml.jinja
constraints/: 3.10.txt  3.11.txt  3.12.txt  3.8.txt  3.9.txt  default.txt
docs/: changelog.md  conf.py  conf.py.jinja  index.md  index.rst  index.rst.jinja
docs/api/: index.rst  settings.md  settings.rst  settings.rst.jinja
docs/cli/: index.md  index.rst  index.rst.jinja  run.md  ss_python.md
docs/dev/: commit.md  dev-containers.md  dev-env.md  env.md  index.md  proj.md  release.md
docs/development/: commit.md  git-workflow.md  index.md  setup-dev-env.md  tests.md
docs/management/: config.md  init.md  release.md  settings.md  update.md
docs/modules/: index.rst  index.rst.jinja  serious_scaffold.settings.rst  serious_scaffold.settings.rst.jinja
includes/: copier-answers-sample.yml  sample.jinja  variable.jinja  version_compare.jinja
includes/licenses/: Apache Software License.jinja  GNU Affero General Public License v3.jinja  GNU General Public License v3 (GPLv3).jinja  MIT License.jinja
includes/sample/: readme_content.jinja
requirements/: dev.txt  docs.txt  lint.txt  package.txt  runtime.txt  tests.txt
src/serious_scaffold/: __init__.py  cli.py  settings.py
src/ss_python/: cli.py  settings.py
src/{{ module_name }}/: cli.py  cli.py.jinja  settings.py.jinja
template/: .gitignore.jinja  .pre-commit-config.yaml.jinja  .readthedocs.yaml  .readthedocs.yaml.jinja  .releaserc.json.jinja  .renovaterc.json.jinja  CHANGELOG.md  LICENSE  LICENSE.jinja  Makefile.jinja  README.md.jinja  [% if repo_host_type == 'gitlab.com' or repo_host_type == 'gitlab-self-managed' %].gitlab-ci.yml[% endif %].jinja  [% if repo_platform == 'gitlab' or repo_platform == 'gitlab-self-managed' %].gitlab-ci.yml[% endif %].jinja  package.json.jinja  pyproject.toml.jinja  requirements.txt  {% if repo_platform == 'gitlab' or repo_platform == 'gitlab-self-managed' %}.gitlab-ci.yml{% endif %}.jinja  {{_copier_conf.answers_file}}.jinja
template/.devcontainer/: Dockerfile.dockerignore  Dockerfile.jinja  devcontainer.json.jinja
template/[% if repo_host_type == 'github.com' %].github[% endif %]/: dependabot.yml
template/[% if repo_host_type == 'github.com' %].github[% endif %]/workflows/: ci.yml.jinja  commitlint.yml  delete-untagged-packages.yml.jinja  devcontainer.yml.jinja  lint-pull-request-title.yml  package.yml.jinja  pages.yml.jinja  pr.yml  readthedocs-preview.yml.jinja  release.yml.jinja  renovate.yml.jinja
template/[% if repo_host_type == 'gitlab.com' or repo_host_type == 'gitlab-self-managed' %].gitlab[% endif %]/ci/: ci.yml.jinja  devcontainer.yml  mr.yml  release.yml
template/[% if repo_host_type == 'gitlab.com' or repo_host_type == 'gitlab-self-managed' %].gitlab[% endif %]/workflows/: ci.yml.jinja  commitlint.yml  devcontainer.yml  devcontainer.yml.jinja  release.yml  release.yml.jinja  renovate.yml
template/[% if repo_platform == 'github' %].github[% endif %]/: FUNDING.yml.jinja
template/[% if repo_platform == 'github' %].github[% endif %]/workflows/: ci.yml.jinja  commitlint.yml  devcontainer.yml.jinja  readthedocs-preview.yml.jinja  release.yml.jinja  renovate.yml.jinja  semantic-release.yml.jinja
template/[% if repo_platform == 'gitlab' or repo_platform == 'gitlab-self-managed' %].gitlab[% endif %]/workflows/: ci.yml.jinja  commitlint.yml  devcontainer.yml.jinja  release.yml.jinja  renovate.yml  semantic-release.yml.jinja
template/constraints/: 3.10.txt  3.11.txt  3.12.txt  3.8.txt  3.9.txt  default.txt
template/docs/: changelog.md  conf.py.jinja  index.md.jinja
template/docs/advanced/: cicd.md.jinja  index.md  partial-dev-env.md
template/docs/api/: settings.md.jinja
template/docs/cli/: index.md.jinja  index.rst.jinja  run.md.jinja  {{ module_name }}.md.jinja
template/docs/dev/: commit.md  dev-containers.md  dev-containers.md.jinja  dev-env.md  env.md  index.md  proj.md.jinja  release.md  release.md.jinja
template/docs/development/: cleanup-dev-env.md  commit.md  git-workflow.md.jinja  index.md  setup-dev-env.md  tests.md.jinja
template/docs/management/: config.md.jinja  (+5 more)
template/requirements/: docs.txt
template/scripts/: generate-coverage-badge.sh
template/tests/: cli_test.py.jinja  settings_test.py.jinja
test/: cli_test.py  cli_test.py.jinja  pkg_test.py  pkg_test.py.jinja  settings_test.py  settings_test.py.jinja
tests/: __init__.py  cli_test.py  cli_test.py.jinja  pkg_test.py  pkg_test.py.jinja  settings_test.py  settings_test.py.jinja
{% if ci=='github' %}.github{% endif %}/workflows/: ci.yml.jinja
(+23 files in other folders)
